Bug 321359 - Failed to resolve artist information on MP3
Summary: Failed to resolve artist information on MP3
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 16.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-19 09:25 UTC by Kai Uwe Broulik
Modified: 2013-06-22 14:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
nepomukshow of that file (6.15 KB, text/plain)
2013-06-19 09:25 UTC, Kai Uwe Broulik
Details
nepomukshow nepomuk:/res/bd9c321b-7dfd-4a7c-92e1-e239796d78ee (1.05 KB, text/plain)
2013-06-19 12:57 UTC, Kai Uwe Broulik
Details
Screenshot (67.96 KB, image/jpeg)
2013-06-19 13:38 UTC, Kai Uwe Broulik
Details
All infos (75.21 KB, image/png)
2013-06-22 00:35 UTC, Hrvoje Senjan
Details
Nepomukshow of file, and both performer properties (6.25 KB, application/octet-stream)
2013-06-22 00:42 UTC, Hrvoje Senjan
Details
Fixes the issue (993 bytes, patch)
2013-06-22 01:17 UTC, Vishesh Handa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2013-06-19 09:25:07 UTC
Nepomuk failed to resolve artist information for some of my MP3 files. Instead of the artist it stored some nepomuk resource URL.
Attached is the nepomukshow output of said file.

Reproducible: Sometimes
Comment 1 Kai Uwe Broulik 2013-06-19 09:25:29 UTC
Created attachment 80628 [details]
nepomukshow of that file
Comment 2 Vishesh Handa 2013-06-19 09:37:07 UTC
It's fine. The artist is stored in another nepomuk resource.

You can do nepomukshow nepomuk:/res/bd9c321b-7dfd-4a7c-92e1-e239796d78ee  in your case to see the details.
Comment 3 Kai Uwe Broulik 2013-06-19 10:22:41 UTC
Ok, so it's a Dolphin issues then? Dolphin doesn't resolve this and instead just prints out the Ressource URL.
Comment 4 Vishesh Handa 2013-06-19 11:31:22 UTC
Oh. Dolphin should resolve it because it uses Nepomuk code to do that.

Could you print the output for - nepomukshow nepomuk:/res/bd9c321b-7dfd-4a7c-92e1-e239796d78ee
Comment 5 Kai Uwe Broulik 2013-06-19 12:57:59 UTC
Created attachment 80635 [details]
nepomukshow nepomuk:/res/bd9c321b-7dfd-4a7c-92e1-e239796d78ee

Here the artist name is properly shown but in Dolphin I only get the ressource URL. Tested with both Additional meta information in icon view and an additional column in tree view.
Comment 6 Kai Uwe Broulik 2013-06-19 12:59:40 UTC
The info panel on the right shows them correctly and so does the properties dialog. It's just the view that does it wrong.
Comment 7 Vishesh Handa 2013-06-19 13:00:40 UTC
Could you please attach a screenshot?
Comment 8 Kai Uwe Broulik 2013-06-19 13:38:26 UTC
Created attachment 80636 [details]
Screenshot
Comment 9 Vishesh Handa 2013-06-19 13:40:11 UTC
This is quite strange. From where did you get nepomukshow?
Comment 10 Kai Uwe Broulik 2013-06-19 13:45:41 UTC
From your repository: scratch/vhanda/nepomukshow
Comment 11 Vishesh Handa 2013-06-21 21:16:30 UTC
Could you please enable the dolphin information panel and check if the same thing happens over there?
Comment 12 Kai Uwe Broulik 2013-06-21 23:11:03 UTC
As I mentioned in Comment #6 the information panel does it right, just the information in the view is not properly resolved.
Comment 13 Hrvoje Senjan 2013-06-22 00:35:41 UTC
Created attachment 80700 [details]
All infos

Confirming also here, with master. Attached screenshot of view, tooltip and info panel. As noted, problem is only in view.
Comment 14 Hrvoje Senjan 2013-06-22 00:42:29 UTC
Created attachment 80701 [details]
Nepomukshow of file, and both performer properties
Comment 15 Hrvoje Senjan 2013-06-22 00:49:33 UTC
If it ain't obvious already, removing the "," from performer, and after reindexing, property is "correctly" shown in view. And vice versa, when adding, it again prints resource URL
Comment 16 Vishesh Handa 2013-06-22 01:15:37 UTC
(In reply to comment #15)
> If it ain't obvious already, removing the "," from performer, and after
> reindexing, property is "correctly" shown in view. And vice versa, when
> adding, it again prints resource URL

It wasn't obvious. Thanks!
Comment 17 Vishesh Handa 2013-06-22 01:17:02 UTC
Created attachment 80702 [details]
Fixes the issue

I've tested the patch. This fixes the issue.

@Frank: Is it okay to commit? Or should I file a review request?
Comment 18 Frank Reininghaus 2013-06-22 06:50:56 UTC
I love it when bugs get assigned to Dolphin and a fix is available already :-)

Patch looks good from my point of view, please commit. Thanks everyone for analyzing and fixing this issue!
Comment 19 Vishesh Handa 2013-06-22 14:12:11 UTC
Git commit 4b0498a454a76bb29953af9ef7510fe5a9363764 by Vishesh Handa.
Committed on 22/06/2013 at 01:11.
Pushed by vhanda into branch 'master'.

Dolphin Nepomuk Roles: Handle values which are resource lists

It is common for music files to have more than one artist

M  +7    -0    dolphin/src/kitemviews/private/knepomukrolesprovider.cpp

http://commits.kde.org/kde-baseapps/4b0498a454a76bb29953af9ef7510fe5a9363764