Dolphin Nepomuk Roles: Handle values which are resource lists

It is common for music files to have more than one artist

BUG: 321359